# wasm-code

./: .gitignore  Cargo.toml  bench.sh  build.sh  run.sh  tools.sh
crates/adder/: Cargo.toml
crates/adder/src/: lib.rs
crates/calculator/: Cargo.toml
crates/calculator/src/: lib.rs
crates/command/: Cargo.toml
crates/command/src/: main.rs
wit/adder/: world.wit
wit/calculator/: world.wit
