[package]
name                 = "adder"
version              = "0.1.0"
edition.workspace    = true
authors.workspace    = true
homepage.workspace   = true
repository.workspace = true

[dependencies]
wit-bindgen-rt = { version = "0.26.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "works:adder"

[package.metadata.component.target]
path  = "../../wit/adder"
world = "adder"

[package.metadata.component.dependencies]
