[package]
name                 = "calculator"
version              = "0.1.0"
edition.workspace    = true
authors.workspace    = true
homepage.workspace   = true
repository.workspace = true

[dependencies]
wit-bindgen-rt = { version = "0.26.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "works:calculator"

[package.metadata.component.target.dependencies]
"works:adder" = { path = "../../wit/adder" }

[package.metadata.component.target]
path  = "../../wit/calculator"
world = "calculator"

[package.metadata.component.dependencies]
